[tool.poetry]
name = "hexlet-code"
version = "0.1.16"
description = "Brain-game python-project for hexlet."
authors = ["Marat <vmarat95@gmail.com>"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]
repository = "https://github.com/Wafflya/python-project-49"
classifiers = [
    "Development Status :: 1 - Alfa",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: Free :: Marassimus License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Fun :: Brain Games",
    "Intended Audience :: Kids",
    "Intended Audience :: Education",
]
[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
flake8 = "^6.0.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
